--- a/datasets/vesuvius-challenge-herculaneum-scrolls.yaml
+++ b/datasets/vesuvius-challenge-herculaneum-scrolls.yaml
@@ -7,7 +7,7 @@ Description: |
   The volumetric reconstructions are distributed as OME-Zarr multiscale datasets to support
   research in virtual unwrapping, segmentation, and text recovery of ancient scrolls.
   Deciphering these scrolls could forever change our understanding of Roman history.
-Documentation: https://scrollprize.org/data # TODO: to update
+Documentation: https://github.com/ScrollPrize/open-data
 Contact: https://scrollprize.org/
 ManagedBy: "[Vesuvius Challenge](https://scrollprize.org/)"
 UpdateFrequency: As additional papyri are scanned and reconstructed.
@@ -27,12 +27,16 @@ Tags:
 License: "[CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/)"
 Resources:
   - Description: OME-Zarr multiscale micro-CT reconstructions of Herculaneum papyri with associated metadata.
-    ARN: arn:aws:s3:::TBD # TODO: to update
+    ARN: arn:aws:s3:::vesuvius-challenge-open-data
     Region: us-east-1
     Type: S3 Bucket
 DataAtWork:
   Tutorials:
-    - Title: Scroll Prize Tutorials (general; dataset-specific updates pending) # TODO: UPDATE
+    - Title: "Get To Know a Dataset: Vesuvius Challenge - CT Scans of Herculaneum Papyri"
+      URL: https://github.com/ScrollPrize/villa/blob/open-data-examples/open-data-examples/get-to-know-a-dataset.ipynb
+      AuthorName: Vesuvius Challenge Team
+      AuthorURL: https://scrollprize.org/
+    - Title: Scroll Prize Tutorials
       URL: https://scrollprize.org/tutorial
       AuthorName: Vesuvius Challenge Team
       AuthorURL: https://scrollprize.org/
