--- a/datasets/noaa-nws-graphcastgfs-pds.yaml
+++ b/datasets/noaa-nws-graphcastgfs-pds.yaml
@@ -1,38 +1,51 @@
-Name: (EXPERIMENTAL) NOAA GraphCast Global Forecast System (GFS) (EXPERIMENTAL)
+Name: NOAA EAGLE (Experimental AI Global and Limited-Area Ensemble) Global Deterministic and Ensemble Forecasts
 Description: |
   <h4>Update</h4>
-  Effective on December 17, 2025, the <a href="https://www.weather.gov/media/notification/pdf_2025/scn25-89_AIGFS_AIGEFS_and_HGEFS.pdf">NOAA/NWS National Centers for Environmental Prediction (NCEP) implemented three new models</a>: the Artificial Intelligence Global Forecast System (AIGFS), the Artificial Intelligence Global Ensemble Forecast System (AIGEFS), and the Hybrid Global Ensemble Forecast System (HGEFS). The AIGFS/AIGEFS are the operational replacement for EAGLE SOLO/Ensemble. Please note that the bucket for EAGLE Ensemble will continue hosting experimental forecasts to support ongoing EAGLE SOLO/Ensemble development once the models are ready.
+  Effective on December 17, 2025, the <a href="https://www.weather.gov/media/notification/pdf_2025/scn25-89_AIGFS_AIGEFS_and_HGEFS.pdf">NOAA/NWS National Centers for Environmental Prediction (NCEP) implemented three new models</a>: the Artificial Intelligence Global Forecast System (AIGFS), the Artificial Intelligence Global Ensemble Forecast System (AIGEFS), and the Hybrid Global Ensemble Forecast System (HGEFS). The AIGFS/AIGEFS are the operational replacement for EAGLE SOLO/Ensemble. <b>The EAGLE SOLO/Ensemble forecasts hosted here are based on the GraphCastGFS described below<b>. Please note that <b>this<b> bucket for EAGLE SOLO/Ensemble will continue hosting experimental forecasts to support ongoing development of EAGLE global weather, sub-seasonal to seasonal (S2S) forecast models once they are ready.
   <br/>
   <br/>
-  The GraphCast Global Forecast System (GraphCastGFS) is an experimental system set up by the National Centers for Environmental Prediction (NCEP) to produce medium range global forecasts. The horizontal resolution is a 0.25 degree latitude-longitude grid (about 28 km). The model runs 4 times a day at 00Z, 06Z, 12Z and 18Z cycles. Major atmospheric and surface fields including temperature, wind components, geopotential height, specific humidity, and vertical velocity, are available. The products are 6 hourly forecasts up to 10 days. The data format is GRIB2.
+  The EAGLE SOLO/ensemble forecasts are generated from GraphCast Global Forecast System (GraphCastGFS). GraphCastGFS is an experimental system set up by the National Centers for Environmental Prediction (NCEP) to produce medium range global forecasts. It is built upon Google DeepMind’s pre-trained GraphCast, a Machine Learning Weather Prediction (MLWP) model. The horizontal resolution is a 0.25 degree latitude-longitude grid (about 28 km). The model runs 4 times a day at 00Z, 06Z, 12Z and 18Z cycles. Major atmospheric and surface fields including temperature, wind components, geopotential height, specific humidity, and vertical velocity, are available. The products are 6 hourly forecasts up to 16 days. The data format is GRIB2.
   <br/>
   <br/>
   The GraphCastGFS system is an experimental weather forecast model built upon the pre-trained Google DeepMind’s GraphCast Machine Learning Weather Prediction (MLWP) model. The GraphCast model is implemented as a message-passing graph neural network (GNN) architecture with “encoder-processor-decoder” configuration. It uses an icosahedron grid with multiscale edges and has around 37 million parameters. This model is pre-trained with ECMWF’s ERA5 reanalysis data. The GraphCastGFSl takes two model states as initial conditions (current and 6-hr previous states) from NCEP 0.25 degree GDAS analysis data and runs GraphCast (37 levels) and GraphCast_operational (13 levels) with a pre-trained model provided by GraphCast. Unit conversion to the GDAS data is conducted to match the input data required by GraphCast and to generate forecast products consistent with GFS from GraphCastGFS’ native forecast data.
   <br/>
   <br/>
-  **The GraphCastGFS version 2 made the following changes from the GraphcastCastGFS version 1.**
-  <br/>
-  1. The 37 vertical levels model is removed due to the storage restriction and limited accuracy.
-  <br/>
-  2. The 13 levels graphcast ML model was fine-tuned with NCEP’s GDAS data as inputs and ECMWF ERA5 data as ground truth from 20210323 to 20220901, validated from 20220901 to 20230101. Evaluation is done with forecasts from 20230101-20240101. The new weights created from the training are used to create global forecasts. It is important to note that the GraphCastGFS v1 model weights obtained from Google’s DeepMInd were provided based on 12 timesteps training with ERA5 data, while the GraphCastGFS v2 model weights resulted from training with 14 timesteps with GDAS and ERA5 data that significantly increased the accuracy of the forecasts compared with GraphCastGFS V1.
+  <b>Model upgrade information:<b>
+  <b>The GraphCastGFS version 1.0<b> takes two model states as initial conditions (current and 6-hr previous states) from NCEP 0.25 degree GDAS analysis data and runs 37-level GraphCast and 13-level GraphCast-operational with a pre-trained model provided by GraphCast. Unit conversion to the GDAS data is conducted to match the input data required by GraphCast and to generate forecast products consistent with GFS from GraphCastGFS’ native forecast data. The forecast has been uploaded to the bucket since 12Z on February 5, 2024. 
   <br/>
   <br/>
-  The input data generated from the GDAS data as GraphCast input is provided under input/ directory. An example of file names is shown below
+  <b>The GraphCastGFS version 2.0<b> made several changes from the GraphCastGFS version 1.0, including: 1) The 37-level model is removed due to the storage restriction and limited accuracy. 2) The 13-level GraphCast ML model was fine-tuned with NCEP’s GDAS analysis data as inputs and ECMWF’s ERA5 data as ground truth. The new weights created from the training are used to create global forecasts. For more details, please refer to NOAA NCEP official note 520 and 522. GraphCastGFS version 2.0 is the base of the EAGLE SOLO/ensemble, whose operational counterparts are AIGFS/AIGEFS v1.0. The EAGLE SOLO version 1.0 forecasts started from 06Z April 24, 2024 and ended at 18Z on December 18, 2025. The EAGLE ensemble version 1.0 forecasts started from 00Z April 29, 2025 and ended at 18Z on December 17, 2025.
+  <br/>
+  Innovations have since been made separately for AIGFS and AIGEFS. To distinguish the two systems, the future development for AIGFS and AIGEFS will be versioned as AIGFSdevX.Y and AIGEFSdevX.Y with experimental forecasts hosted in this bucket.
   <br/>
   <br/>
-  source-gdas_date-2024022000_res-0.25_levels-13_steps-2.nc
+  <b>AIGFSdev2.1<b> updated loss function in GraphCast from grid-point mean square error to spectral harmonic based mean square error. The loss scaling is also updated for most of the variables. The forecasts started from 00Z Dec 19, 2025 under graphcast.YYYYMMDD/cyc/forecast_13_levels. Additional feature updates will go to EAGLE SOLO test, whose forecast will be under  graphcast.YYYYMMDD/cyc/forecast_13_levels_test. 
   <br/>
   <br/>
-  The files are under forecasts_13_levels/. There are 40 files under each directory covering a 10 day forecast. An example of file name is listed below
+  <b>Data information:<b>
   <br/>
   <br/>
   graphcastgfs.t00z.pgrb2.0p25.f006
   <br/>
   <br/>
-  *The GraphCastGFS version 2.1 change log:*
+  The input data generated from the GDAS data is provided under the input/ directory. An example of file names is shown below:
   <br/>
   <br/>
-  1. Starting from 06 cycle on 20240710, the forecast length is increased from 10 days to 16 days.
+  <a href="http://source-gdas_date-2024022000_res-0.25_levels-13_steps-2.nc">source-gdas_date-2024022000_res-0.25_levels-13_steps-2.nc"
+  <br/>
+  <br/>
+  The EAGLE SOLO forecast files are under forecasts_13_levels/. There are 128 files (including grib2 index files) under each directory covering 16-day forecasts. An example of a file name is listed below:
+  <br/>
+  <br/>
+  graphcastgfs.t00z.pgrb2.0p25.f006
+  graphcastgfs.t00z.pgrb2.0p25.f006.idx
+  <br/>
+  <br/>
+  The EAGLE ensemble forecast files are under EAGLE_ensemble/pmlgefs.YYYYMMDD/cyc/forecasts_13_levels_ICmember_model_X. There are 128 files under each directory covering a16-day forecasts. An example of file name is listed below:
+  <br/>
+  <br/>
+  pmlgefsc00.t00z.pgrb2.0p25.f006
+  pmlgefsc00.t00z.pgrb2.0p25.f006.idx
   <br/>
   <br/>
   Please note that this NOAA GraphCastGFS Model was produced using a code package released by Google DeepMind. For information on Google DeepMind, please visit their github page listed in the documentation and license sections of this page.
@@ -53,7 +66,7 @@ Tags:
   - environmental
   - meteorological
   - weather
-License: NOAA's GraphCast GFS products are released under CC0 license. The products in this bucket only contain NOAA produced products and not GraphCast code or training data. For information on the GraphCast code package, please visit the [Google DeepMind GraphCast Github License page](https://github.com/google-deepmind/graphcast?tab=readme-ov-file#license-and-attribution). The weights that are used in GraphCastGFS v2 were generated based on the pre-trained weights from GoogleDeepMind. They are released under CC BY-NC-SA 4.0 license.
+License: NOAA's GraphCast GFS products are released under CC0 license. The products in this bucket only contain NOAA produced products and not GraphCast code or training data. For information on the GraphCast code package, please visit the [Google DeepMind GraphCast Github License page](https://github.com/google-deepmind/graphcast?tab=readme-ov-file#license-and-attribution).
 Resources:
   - Description: GraphCast GFS data
     ARN: arn:aws:s3:::noaa-nws-graphcastgfs-pds
@@ -69,3 +82,4 @@ DataAtWork:
   Tutorials:
   Tools & Applications:
   Publications:
+
