--- a/datasets/caladapt-coproduced-climate-data.yaml
+++ b/datasets/caladapt-coproduced-climate-data.yaml
@@ -28,11 +28,21 @@ Resources:
     Type: S3 Bucket
     Explore:
       - '[Browse Bucket](https://cadcat.s3.amazonaws.com/index.html)'
-      - '[Data Catalog](https://cadcat.s3.amazonaws.com/cae-collection.csv)'
+      - '[Data Catalog](https://cadcat.s3.amazonaws.com/cae-zarr.csv)'
 DataAtWork:
   Tutorials:
-    - Title: Example Use Cases of Data Via Cal-Adapt Analytics Engine
-      URL: https://analytics.cal-adapt.org/analytics/example/
+    - Title: List Data Hosted on The Cal-Adapt Data Catalog
+      URL: https://nbviewer.org/urls/cadcat.s3.amazonaws.com/catalog.ipynb
       NotebookURL: https://nbviewer.org/urls/cadcat.s3.amazonaws.com/catalog.ipynb
+      AuthorName: Cal-Adapt Analytics Engine Team
+      AuthorURL: https://github.com/cal-adapt
+    - Title: Tutorial on Data Access Using `climakitae` 
+      URL: https://github.com/cal-adapt/cae-notebooks/blob/main/data-access/basic_data_access.ipynb
+      NotebookURL: https://github.com/cal-adapt/cae-notebooks/blob/main/data-access/basic_data_access.ipynb
+      AuthorName: Cal-Adapt Analytics Engine Team
+      AuthorURL: https://github.com/cal-adapt
+    - Title: Analyzing Data Through a Global Warming Level Lens
+      URL: https://github.com/cal-adapt/cae-notebooks/blob/main/analysis/warming_level_methods.ipynb
+      NotebookURL: https://github.com/cal-adapt/cae-notebooks/blob/main/analysis/warming_level_methods.ipynb
       AuthorName: Cal-Adapt Analytics Engine Team
       AuthorURL: https://github.com/cal-adapt
