--- a/datasets/caladapt-coproduced-climate-data.yaml
+++ b/datasets/caladapt-coproduced-climate-data.yaml
@@ -2,7 +2,7 @@ Name: Co-Produced Climate Data to Support California's Resilience Investments
 Description: Downscaled future and historical climate projections for California and her environs in support of California's Fifth Climate Assessment
 Documentation: https://analytics.cal-adapt.org/data/
 Contact: analytics@cal-adapt.org
-ManagedBy: Cal-Adapt Analytics Engine https://analytics.cal-adapt.org/
+ManagedBy: "Cal-Adapt: Analytics Engine (by Eagle Rock Analytics, Inc.)"
 UpdateFrequency: Infrequent, Irregular
 Collabs:
   ASDI:
@@ -46,3 +46,5 @@ DataAtWork:
       NotebookURL: https://github.com/cal-adapt/cae-notebooks/blob/main/analysis/warming_level_methods.ipynb
       AuthorName: Cal-Adapt Analytics Engine Team
       AuthorURL: https://github.com/cal-adapt
+ADXCategories:
+  - Environmental Data
