adding tools and applications for data access

--- a/datasets/caladapt-coproduced-climate-data.yaml
+++ b/datasets/caladapt-coproduced-climate-data.yaml
@@ -45,6 +45,27 @@ DataAtWork:
       URL: https://github.com/cal-adapt/cae-notebooks/blob/main/analysis/warming_level_methods.ipynb
       NotebookURL: https://github.com/cal-adapt/cae-notebooks/blob/main/analysis/warming_level_methods.ipynb
       AuthorName: Cal-Adapt Analytics Engine Team
+      AuthorURL: https://github.com/cal-adaptj
+  Tools & Applications:
+    - Title: Analytics Engine Data Catalog
+      URL: https://analytics.cal-adapt.org/data/access/
+      AuthorName: "Cal-Adapt: Analytics Engine Team"
+      AuthorURL: https://github.com/cal-adapt
+    - Title: Direct Connection in Xarray with S3 Path
+      URL: https://analytics.cal-adapt.org/data/access/
+      AuthorName: "Cal-Adapt: Analytics Engine Team"
+      AuthorURL: https://github.com/cal-adapt
+    - Title: AWS Explorer Functions
+      URL: https://analytics.cal-adapt.org/data/access/
+      AuthorName: "Cal-Adapt: Analytics Engine Team"
+      AuthorURL: https://github.com/cal-adapt
+    - Title: AWS Command Line Interface (CLI)
+      URL: https://analytics.cal-adapt.org/data/access/
+      AuthorName: "Cal-Adapt: Analytics Engine Team"
+      AuthorURL: https://github.com/cal-adapt
+    - Title: Cal-Adapt Data Download Tool (DDT)
+      URL: https://analytics.cal-adapt.org/data/access/
+      AuthorName: "Cal-Adapt: Analytics Engine Team"
       AuthorURL: https://github.com/cal-adapt
 ADXCategories:
   - Environmental Data
