--- a/datasets/marine-energy-data.yaml
+++ b/datasets/marine-energy-data.yaml
@@ -50,6 +50,12 @@ Resources:
     Type: S3 Bucket
     Explore:
     - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=marine-energy-data&prefix=us-tidal%2F)'
+  - Description: "[Water Velocity and Turbulence Data from Sequim Bay, WA, 2016 - 2025](https://mhkdr.openei.org/submissions/662)"
+    ARN: arn:aws:s3:::marine-energy-data/primre/sequim-tidal-resource-deployments/
+    Region: us-west-2
+    Type: S3 Bucket
+    Explore:
+    - '[Browse Dataset](https://data.openei.org/s3_viewer?bucket=marine-energy-data&prefix=primre%2Fsequim-tidal-resource-deployments%2F)'
 DataAtWork:
   Tools & Applications:
   Publications:
