updating notebook link

--- a/datasets/vesuvius-challenge-herculaneum-scrolls.yaml
+++ b/datasets/vesuvius-challenge-herculaneum-scrolls.yaml
@@ -33,10 +33,10 @@ Resources:
 DataAtWork:
   Tutorials:
     - Title: "Get To Know a Dataset: Vesuvius Challenge - CT Scans of Herculaneum Papyri"
-      URL: https://github.com/ScrollPrize/villa/blob/open-data-examples/open-data-examples/get-to-know-a-dataset.ipynb
+      URL: https://github.com/ScrollPrize/open-data/blob/main/examples/get-to-know-a-dataset.ipynb
       AuthorName: Vesuvius Challenge Team
       AuthorURL: https://scrollprize.org/
-    - Title: Scroll Prize Tutorials
+    - Title: Vesuvius Challenge - Tutorials
       URL: https://scrollprize.org/tutorial
       AuthorName: Vesuvius Challenge Team
       AuthorURL: https://scrollprize.org/
