Revise dataset metadata and add tutorials/tools
Updated dataset details and added new tutorial and tools information.

--- a/datasets/met-office-uk-global-deterministic-nwp.yaml
+++ b/datasets/met-office-uk-global-deterministic-nwp.yaml
@@ -34,6 +34,15 @@ Resources:
     Type: SNS Topic
 DataAtWork:
   Tutorials:
-    - Title: Decoding data from WMO binary formats
-      URL: https://training.wis2box.wis.wmo.int/practical-sessions/decoding-data/
-      AuthorName: World Meteorological Organization (WMO)
+    - Title: Get to Know a Dataset: Met Office UK Global Deterministic NWP WIS2
+      URL: https://github.com/MetOffice/asdi-dataset-tutorials/blob/main/met-office-global-deterministic-nwp.ipynb
+      NotebookURL: https://github.com/MetOffice/asdi-dataset-tutorials/blob/main/met-office-global-deterministic-nwp.ipynb
+      AuthorName: Met Office
+      AuthorURL: https://www.metoffice.gov.uk
+  Tools & Applications:
+    - Title: ecCodes - Decoding meteorological data formats
+      URL: https://confluence.ecmwf.int/display/ECC/What+is+ecCodes
+      AuthorName: European Centre for Medium-Range Weather Forecast (ECMWF)
+    - Title: Panoply - Plot geographical and climate‑related scientific data
+      URL: https://www.giss.nasa.gov/tools/panoply/download/
+      AuthorName: National Aeronautics and Space Administration (NASA)
