Adding SNS topic resource

--- a/datasets/data-to-science.yaml
+++ b/datasets/data-to-science.yaml
@@ -26,11 +26,10 @@ Tags:
 License: CC-BY-SA-4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 Citation:
 Resources:
-  - Description:
-    ARN:
-    Region:
-    Type:
-    Explore:
+  - Description: Notifications for new Data to Science data
+    ARN: arn:aws:sns:us-east-2:244573782505:data-to-science-opendata-bucket-object_created
+    Region: us-east-2
+    Type: SNS Topic
 DataAtWork:
   Tutorials:
     - Title: Data to Science User Manual
