--- a/datasets/data-to-science.yaml
+++ b/datasets/data-to-science.yaml
@@ -26,6 +26,10 @@ Tags:
 License: CC-BY-SA-4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 Citation:
 Resources:
+  - Description: Storage for Data to Science open datasets
+    ARN: arn:aws:s3:::data-to-science-opendata-bucket
+    Region: us-east-2
+    Type: S3 Bucket
   - Description: Notifications for new Data to Science data
     ARN: arn:aws:sns:us-east-2:244573782505:data-to-science-opendata-bucket-object_created
     Region: us-east-2
