--- a/datasets/deafrica-sentinel5p.yaml
+++ b/datasets/deafrica-sentinel5p.yaml
@@ -94,6 +94,9 @@ Resources:
     Type: SNS Topic
 DataAtWork:
   Tutorials:
+    - Title: Get to Know a Dataset: [DE Africa Sentinel 5P TROPOMI Level-2]
+      URL: https://github.com/digitalearthafrica/deafrica-direct-access/tree/aws_sentinel5p/Datasets/open-data-examples/DEafrica_sentinel_5p
+      AuthorName: Digital Earth Africa Contributors
     - Title: Digital Earth Africa Training
       URL: http://learn.digitalearthafrica.org/
       AuthorName: Digital Earth Africa Contributors
