--- a/datasets/chammi.yaml
+++ b/datasets/chammi.yaml
@@ -7,7 +7,7 @@ Description: |
   high-resolution images curated from 75 diverse, publicly available biological studies. This dataset is useful to investigate and develop channel-adaptive models, 
   which could process microscopy images of varying technical specifications and regardless of the number of channels. By breaking the limitations of existing models, 
   CHAMMI-75 is an invaluable resource for creating the next generation of foundation models for image-based biological research.  
-Documentation: https://github.com/CaicedoLab/CHAMMI-75
+Documentation: https://morgridge.org/research/labs/caicedo/chammi-75/
 Contact: Juan Caicedo, juan.caicedo@wisc.edu
 ManagedBy: Morgridge Institute for Research
 UpdateFrequency: Every 2 years
@@ -22,7 +22,12 @@ Tags:
   - fluorescence imaging
   - aws-pds
 License: CC BY 4.0 License
-Citation: 
+Citation: @article{agrawal2025chammi,
+  title={CHAMMI-75: pre-training multi-channel models with heterogeneous microscopy images},
+  author={Agrawal, Vidit and Peters, John and Thompson, Tyler N and Sanian, Mohammad Vali and Pham, Chau and Moshkov, Nikita and Kazi, Arshad and Pillai, Aditya and Freeman, Jack and Kang, Byunguk and others},
+  journal={arXiv preprint arXiv:2512.20833},
+  year={2025}
+}
 Resources:
   - Description: "CHAMMI-75 Dataset: Images, training set and evaluation set available in an S3 bucket"
     ARN: arn:aws:s3:::chammi-data
@@ -34,11 +39,14 @@ DataAtWork:
       URL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/
       NotebookURL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/get-to-know-a-dataset-template.ipynb
       AuthorName: Vidit Agrawal, Juan Caicedo
-    - Title: Running CHAMMI-75 Evaluation Benchmarks
+    - Title: "Running CHAMMI-75 Evaluation Benchmarks"
       URL:  https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/
       NotebookURL: https://github.com/CaicedoLab/CHAMMI-75/blob/main/aws-tutorials/running-benchmarks.ipynb
       AuthorName: Vidit Agrawal, Juan Caicedo
   Tools & Applications:
+    - Title: CHAMMI-75 Website
+      URL: https://morgridge.org/research/labs/caicedo/chammi-75/
+      AuthorName: Vidit Agrawal, Juan Caicedo
     - Title: CHAMMI-75 Source Code
       URL: https://github.com/CaicedoLab/CHAMMI-75
       AuthorName: Vidit Agrawal
@@ -46,6 +54,9 @@ DataAtWork:
       URL: https://github.com/chaudatascience/channel_adaptive_models
       AuthorName: Chau Pham
   Publications:
+    - Title: "CHAMMI-75: pre-training multi-channel models with heterogeneous microscopy images"
+      URL: https://arxiv.org/abs/2512.20833
+      AuthorName: Vidit Agrawal, John Peters, Tyler N. Thompson, Mohammad Vali Sanian, Chau Pham, Nikita Moshkov, Arshad Kazi, Aditya Pillai, Jack Freeman, Byunguk Kang, Samouil L. Farhi, Ernest Fraenkel, Ron Stewart, Lassi Paavolainen, Bryan A. Plummer, Juan C. Caicedo
     - Title: "CHAMMI: A benchmark for channel-adaptive models in microscopy imaging"
       URL: https://neurips.cc/virtual/2023/poster/73620
       AuthorName: Zitong Sam Chen, Chau Pham, Siqi Wang, Michael Doron, Nikita Moshkov, Bryan Plummer, Juan C. Caicedo
