Add MorphEm Model entry to chammi.yaml

--- a/datasets/chammi.yaml
+++ b/datasets/chammi.yaml
@@ -47,6 +47,9 @@ DataAtWork:
     - Title: CHAMMI-75 Website
       URL: https://morgridge.org/research/labs/caicedo/chammi-75/
       AuthorName: Vidit Agrawal, Juan Caicedo
+    - Title: MorphEm Model (Trained on CHAMMI-75)
+      URL: https://huggingface.co/CaicedoLab/MorphEm
+      AuthorName: Vidit Agrawal, John Peters, Juan Caicedo
     - Title: CHAMMI-75 Source Code
       URL: https://github.com/CaicedoLab/CHAMMI-75
       AuthorName: Vidit Agrawal
