update the notebook URL

--- a/datasets/jenger.yaml
+++ b/datasets/jenger.yaml
@@ -1,6 +1,6 @@
 Name: JENGER
 Description: Japanese ENcyclopedia of GEnetic associations libraRy
-Documentation: http://jenger.riken.jp/
+Documentation: http://jenger.riken.jp/en/
 Contact: chikashi.terao@riken.jp
 ManagedBy: Fujita Health University
 UpdateFrequency: Irregular
