Update an e-mail address, etc

--- a/datasets/jenger.yaml
+++ b/datasets/jenger.yaml
@@ -1,7 +1,7 @@
 Name: JENGER
 Description: Japanese ENcyclopedia of GEnetic associations libraRy
 Documentation: http://jenger.riken.jp/en/
-Contact: chikashi.terao@riken.jp
+Contact: a0001101@kuhp.kyoto-u.ac.jp
 ManagedBy: Fujita Health University
 UpdateFrequency: Irregular
 Tags:
@@ -11,7 +11,7 @@ Tags:
   - structural variation
   - genetic
   - life science
-License: The dataset is provided for academic research use only and must be used inaccordance with the data use policies of BioBank Japan and related cohorts.
+License: The dataset is provided for academic research use only, distributed under the terms of the Creative Commons Attribution License (https://creativecommons.org/licenses/by/4.0/), which permits unrestricted reuse, distribution, and reproduction in any medium, provided the original work is properly cited.
 Resources:
   - Description: This dataset consists of large-scale human genetics resources derived from Japanese population-based studies, including genome-wide association study (GWAS) summary statistics and variant call format (VCF) files, etc. The data cover a wide range of complex traitsand diseases and are intended to support statistical genetics, population genetics, and functional genomics research. All datasets are released in compliance with the data use policies of BioBank Japan and related cohorts, and do not contain individual-level identifiable information.
     ARN: arn:aws:s3:::jenger
@@ -20,11 +20,11 @@ Resources:
 DataAtWork:
   Tutorials:
     - Title: Japanese ENcyclopedia of GEnetic associations libraRy
-      URL: http://jenger.riken.jp/
+      URL: http://jenger.riken.jp/en/
       NotebookURL: https://github.com/cterao-lab/open-data-examples/blob/main/JENGER/get-to-know-a-dataset.ipynb
       AuthorName: Chikashi Terao
   Tools & Applications:
     - Title: Japanese ENcyclopedia of GEnetic associations libraRy
-      URL: http://jenger.riken.jp/
+      URL: http://jenger.riken.jp/en/
       AuthorName: Chikashi Terao
 ADXCategories:
