ok: Update chammi.yaml

--- a/datasets/chammi.yaml
+++ b/datasets/chammi.yaml
@@ -22,12 +22,7 @@ Tags:
   - fluorescence imaging
   - aws-pds
 License: CC BY 4.0 License
-Citation: @article{agrawal2025chammi,
-  title={CHAMMI-75: pre-training multi-channel models with heterogeneous microscopy images},
-  author={Agrawal, Vidit and Peters, John and Thompson, Tyler N and Sanian, Mohammad Vali and Pham, Chau and Moshkov, Nikita and Kazi, Arshad and Pillai, Aditya and Freeman, Jack and Kang, Byunguk and others},
-  journal={arXiv preprint arXiv:2512.20833},
-  year={2025}
-}
+Citation: "Agrawal, V., Peters, J., Thompson, T. N., Sanian, M. V., Pham, C., Moshkov, N., Kazi, A., Pillai, A., Freeman, J., Kang, B., et al. (2025). CHAMMI-75: pre-training multi-channel models with heterogeneous microscopy images. arXiv preprint arXiv:2512.20833."
 Resources:
   - Description: "CHAMMI-75 Dataset: Images, training set and evaluation set available in an S3 bucket"
     ARN: arn:aws:s3:::chammi-data
