--- a/datasets/canoe.yaml
+++ b/datasets/canoe.yaml
@@ -5,6 +5,7 @@ Contact: canoe@robotics.utias.utoronto.ca
 ManagedBy: "[Autonomous Space Robotics Laboratory (ASRL)](http://asrl.utias.utoronto.ca)"
 UpdateFrequency: New sequences will be added as they are collected.
 Tags:
+  - aws-pds
   - autonomous vehicles
   - robotics 
   - computer vision
