--- a/datasets/wis2-global-cache-jma.yaml
+++ b/datasets/wis2-global-cache-jma.yaml
@@ -27,7 +27,7 @@ Resources:
     Region: ap-northeast-1
     Type: S3 Bucket
     Explore:
-    - '[Browse Bucket](https://xxxxxxxxxxxxxxxxxxxxxxx.amazonaws.com/index.html)'
+    - '[Browse Bucket](https://global-cache-of-japan.s3.ap-northeast-1.amazonaws.com/index.html)'
 DataAtWork:
   Tutorials:
     - Title: WIS 2.0 video for 19th World Meterological Congress
