ok: Update nci-imaging-data-commons.yaml

--- a/datasets/nci-imaging-data-commons.yaml
+++ b/datasets/nci-imaging-data-commons.yaml
@@ -55,3 +55,5 @@ DataAtWork:
       URL: https://doi.org/10.1158/0008-5472.can-21-0950
       AuthorName: Fedorov A, Longabaugh W, Pot D, Clunie D, Pieper S, Aerts H, et al.
       AuthorURL: https://learn.canceridc.dev/idc-team
+ADXCategories:
+  - Healthcare & Life Sciences Data
