ok: Update data-to-science.yaml

--- a/datasets/data-to-science.yaml
+++ b/datasets/data-to-science.yaml
@@ -10,6 +10,7 @@ Contact: jinha@purdue.edu
 ManagedBy: Geospatial Data Science Lab at Purdue University
 UpdateFrequency: None
 Tags:
+  - aws-pds
   - aerial imagery
   - agriculture
   - cog
@@ -64,4 +65,3 @@ DataAtWork:
       AuthorURL:
 DeprecatedNotice:
 ADXCategories:
-  -
