--- a/datasets/canoe.yaml
+++ b/datasets/canoe.yaml
@@ -1,5 +1,5 @@
 Name: CANOE (Canadian Aquatic Navigation for Observation of the Environment) Dataset
-Description: This autonomous navigation dataset includes data from a 360-degree Navtech radar, a 128-beam Ouster OS1 lidar with integrated IMU, a Teledyne Bumblebee stereo camera, Oculus M3000d imaging sonar, motor inputs, and GNSS. This dataset was collected on a lake and reservoir in Ontario, Canada. The intended purpose of this dataset is to enable the development and benchmarking of autonomous navigation algorithms in aquatic environments. In the future, we hope to release localization and odometry benchmarks.
+Description: This autonomous marine navigation dataset includes data from a 360-degree Navtech radar, a 128-beam Ouster OS1 lidar with integrated IMU, a Teledyne Bumblebee stereo camera, Oculus M3000d imaging sonar, motor inputs, and GNSS. This dataset was collected on a lake and reservoir in Ontario, Canada. The intended purpose of this dataset is to enable the development and benchmarking of autonomous navigation algorithms in aquatic environments. In the future, we hope to release localization and odometry benchmarks.
 Documentation: https://github.com/utiasASRL/pycanoe/blob/main/DATA_REFERENCE.md
 Contact: canoe@robotics.utias.utoronto.ca
 ManagedBy: "[Autonomous Space Robotics Laboratory (ASRL)](http://asrl.utias.utoronto.ca)"
@@ -10,13 +10,18 @@ Tags:
   - computer vision
   - lidar
   - radar
+  - sonar
 License: "[CC BY 4.0](https://creativecommons.org/licenses/by/4.0/legalcode)"
 Citation:
 Resources:
-  - Description: Canoe dataset
-    ARN: arn:aws:s3:::canoe
-    Region: ????
+  - Description: Canoe Dataset
+    ARN: arn:aws:s3:::canoe-data
+    Region: us-west-2
     Type: S3 Bucket
+  - Description: Notifications for new canoe data
+    ARN: arn:aws:sns:us-west-2:455373446640:canoe-data-object_created
+    Region: us-west-2
+    Type: SNS Topic
 DataAtWork:
   Tutorials:
     - Title: Get to Know a Dataset: Canoe
