Fix ARN and Browse Bucket in run_dbcan-database.yaml
Updated ARN and Browse Bucket URL in YAML file.

--- a/datasets/run_dbcan-database.yaml
+++ b/datasets/run_dbcan-database.yaml
@@ -14,11 +14,11 @@ Tags:
 License: There are no restrictions on the use of this data.
 Resources:
   - Description: run_dbcan CAZyme and CGC annotation database
-    ARN: NA #SHOULD BE CAHNGED
+    ARN: arn:aws:s3:::dbcan
     Region: us-west-2
     Type: S3 Bucket
     Explore:
-    - '[Browse Bucket](NA)' #SHOULD BE CHANGED
+    - '[Browse Bucket] (https://dbcan.s3.us-west-2.amazonaws.com/)
 DataAtWork:
   Tutorials: https://run-dbcan.readthedocs.io/en/latest/
   Tools & Applications:
