--- a/datasets/run_dbcan-database.yaml
+++ b/datasets/run_dbcan-database.yaml
@@ -1,5 +1,5 @@
 Name: run_dbcan CAZyme and CGC annotation database on AWS
-Description: Description: Database for use with run_dbcan (CAZyme and CGC annotation), including CAZyme, Transporter, Transcription factor, Signaling Transduction Protein, Sulfatase, Peptidase, and Polysaccharide utilization Loci.
+Description: Database for use with run_dbcan (CAZyme and CGC annotation), including CAZyme, Transporter, Transcription factor, Signaling Transduction Protein, Sulfatase, Peptidase, and Polysaccharide utilization Loci.
 Documentation: https://run-dbcan.readthedocs.io/en/latest/
 Contact: xzhang55@huskers.unl.edu; hyi@stjude.org; yyin@unl.edu
 ManagedBy: Xinpeng Zhang; Haidong Yi; Yanbin Yin
