ok: Update lgnd-clay-v1-5-sentinel2.yaml

--- a/datasets/lgnd-clay-v1-5-sentinel2.yaml
+++ b/datasets/lgnd-clay-v1-5-sentinel2.yaml
@@ -5,6 +5,7 @@ Contact: contact@madewithclay.org
 ManagedBy: "[Source Cooperative](https://source.coop/)"
 UpdateFrequency: As new data versions become available
 Tags:
+  - aws-pds
   - satellite imagery
   - earth observation
   - machine learning
