--- a/datasets/asl_1000.yaml
+++ b/datasets/asl_1000.yaml
@@ -24,3 +24,4 @@ Resources:
     Region: us-east-2
     Type: S3 Bucket
     ControlledAccess: https://www.nvidia.com/en-us/gated-resources/trustworthy-ai-american-sign-language/dataset/
+Citation: Nguyen, Khanh, Radha Sri-Tharan, Arun George Zachariah, Pratyusha Maiti, Latasha Grainger, Amariah Arias, Dnaijsha Minor et al. "A Scalable Data Pipeline for ASL Media Processing and Annotation." (2026).
