--- a/datasets/fomo-norlab.yaml
+++ b/datasets/fomo-norlab.yaml
@@ -46,8 +46,8 @@ Resources:
       Primary S3 bucket containing the full FoMo dataset: lidar scans, radar images, stereo &
       monocular camera frames, audio, IMU logs, odometry, GNSS-PPK trajectories, calibration sequences,
       metadata files, and ROS2/mcap-compatible exports.
-    ARN: "To be done after Step 5"
-    Region: ""
+    ARN: "arn:aws:s3:::fomo-dataset"
+    Region: "US West (Oregon) us-west-2"
     Type: S3 Bucket
     Explore:
       - "To be done after Step 5"
