doc: add ADXCategories for Illumina DRAGEN

--- a/datasets/ilmn-dragen-1kgp.yaml
+++ b/datasets/ilmn-dragen-1kgp.yaml
@@ -177,3 +177,5 @@ DataAtWork:
     - Title: "Unveiling Illumina Connected Annotations: A breakthrough in genomic annotation"
       URL: https://www.illumina.com/science/genomics-research/articles/Connected-Annotations-blog.html
       AuthorName: Illumina Inc. (2024)
+ADXCategories:
+  - Healthcare & Life Sciences Data
