ok: Update ilmn-dragen-1kgp.yaml

--- a/datasets/ilmn-dragen-1kgp.yaml
+++ b/datasets/ilmn-dragen-1kgp.yaml
@@ -55,16 +55,14 @@ Tags:
   - bioinformatics
   - biology
   - cram
-  - genetics
-  - genomics
+  - genetic
+  - genomic
   - genotyping
   - life sciences
   - machine learning
   - population genetics
   - short read sequencing
-  - copy number variation
   - structural variation
-  - short tandem repeats
   - tertiary analysis
   - variant annotation
   - whole genome sequencing
@@ -179,3 +177,4 @@ DataAtWork:
       AuthorName: Illumina Inc. (2024)
 ADXCategories:
   - Healthcare & Life Sciences Data
+
