ok: Update mast-jades.yaml

--- a/datasets/mast-jades.yaml
+++ b/datasets/mast-jades.yaml
@@ -15,6 +15,7 @@ Citation: |
   using JADES data in published works.
 UpdateFrequency: Never
 Tags:
+  - aws-pds
   - astronomy
 License: All HLSPs hosted at MAST are subject to a [CC By 4.0 license](https://creativecommons.org/licenses/by/4.0/).
 Resources:
