ok: Update mast-tess-spoc.yaml

--- a/datasets/mast-tess-spoc.yaml
+++ b/datasets/mast-tess-spoc.yaml
@@ -9,6 +9,7 @@ ManagedBy: "[Space Telescope Science Institute](http://www.stsci.edu/)"
 Citation: Please cite [Caldwell et. al 2020](https://ui.adsabs.harvard.edu/abs/2020RNAAS...4..201C/abstract) when using TESS-SPOC data in published works.
 UpdateFrequency: Monthly
 Tags:
+  - aws-pds
   - astronomy
 License: All HLSPs hosted at MAST are subject to a [CC By 4.0 license](https://creativecommons.org/licenses/by/4.0/).
 Resources:
