ok: Update mast-tess-spoc.yaml

--- a/datasets/mast-tess-spoc.yaml
+++ b/datasets/mast-tess-spoc.yaml
@@ -25,7 +25,7 @@ Resources:
 DataAtWork:
   Tutorials:
   Tools & Applications:
-  - Title: TIKE: a free, Jupyter-based cloud platform to access and analyze MAST's AWS timeseries data
+  - Title: "TIKE: a free, Jupyter-based cloud platform to access and analyze MAST's AWS timeseries data"
     URL: https://timeseries.science.stsci.edu
     AuthorName: MAST Staff
   Publications: 
