updated documentation paths

--- a/datasets/asset-data-igp-brick-kilns-pak.yaml
+++ b/datasets/asset-data-igp-brick-kilns-pak.yaml
@@ -1,6 +1,6 @@
 Name: IGP Brick Kilns Pakistan
 Description: This dataset includes detailed information about brick kilns, their locations, capacities, emissions, and other relevant attributes around the Pakistann Gangetic Plain.
-Documentation: https://github.com/APAD2024/APAD-Asset-Data/blob/main/Asset%20Data/IGP/Asset_Data_IGP/Brick%20Kiln/Brick_kilns.md
+Documentation: https://github.com/APAD2024/APAD-Asset-Data/blob/main/Asset%20Data/IGP/Asset_Data_IGP/Brick%20Kiln/Readme.md
 Contact: https://github.com/APAD2024/APAD-Asset-Data/issues
 
 ManagedBy: APAD
