--- a/datasets/asset-data-igp-paper-and-pulp.yaml
+++ b/datasets/asset-data-igp-paper-and-pulp.yaml
@@ -1,6 +1,6 @@
 Name: IGP Paper and Pulp Plant
 Description: This dataset includes detailed information about paper and pulp plants, their locations, capacities, emissions, and other relevant attributes around the Indian Gangetic Plain.
-Documentation: https://github.com/APAD2024/APAD-Asset-Data/blob/main/Asset%20Data/IGP/Asset_Data_IGP/Paper%20and%20Pulp/paper-and-pulp.md
+Documentation: https://github.com/APAD2024/APAD-Asset-Data/blob/main/Asset%20Data/IGP/Asset_Data_IGP/Paper%20and%20Pulp/Readme.md
 Contact: https://github.com/APAD2024/APAD-Asset-Data/issues
 
 ManagedBy: APAD
