--- a/datasets/asset-data-igp-power-generation.yaml
+++ b/datasets/asset-data-igp-power-generation.yaml
@@ -1,6 +1,6 @@
 Name: IGP Power Generation Plant
 Description: This dataset includes detailed information about power generation plants, their locations, capacities, emissions, and other relevant attributes around the Indian Gangetic Plain.
-Documentation: https://github.com/APAD2024/APAD-Asset-Data/blob/main/Asset%20Data/IGP/Asset_Data_IGP/Power%20Generation/power-generation.md
+Documentation: https://github.com/APAD2024/APAD-Asset-Data/blob/main/Asset%20Data/IGP/Asset_Data_IGP/Power%20Generation/Readme.md
 Contact: https://github.com/APAD2024/APAD-Asset-Data/issues
 
 ManagedBy: APAD
